# notty_game

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: health_check.yaml  release.yaml
notty/: __init__.py  main.py
notty/dev/artifacts/builder/: builder.py
notty/dev/configs/: configs.py
notty/dev/tests/fixtures/: fixture.py
notty/dev/tests/fixtures/scopes/: class_.py  function.py  module.py  package.py  session.py
notty/src/: card.py  consts.py  deck.py  game.py  player.py
notty_game/dev/configs/: configs.py
tests/: conftest.py
tests/test_notty/: test_main.py
tests/test_notty/test_dev/test_artifacts/test_builder/: test_builder.py
tests/test_notty/test_dev/test_configs/: test_configs.py
tests/test_notty/test_src/: test_card.py  test_consts.py  test_deck.py  test_game.py  test_player.py
tests/test_notty_game/: test_main.py
tests/test_notty_game/test_dev/test_configs/: test_configs.py
