[project]
name = "notty-game"
version = "0.1.4"
description = "A simple card game called Notty using Pygame"
authors = [
    {name = "Winipedia",email = "win.steveker@gmx.de"},
    {name = "Azeez",email = "abdualahmari2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dynamic = ["dependencies"]


[project.scripts]
notty-game = "winipedia_utils.dev.cli.cli:main"
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "notty_game"

[tool.poetry.dependencies]
pygame = "*"
winipedia-utils = "*"

[tool.poetry.group.dev.dependencies]
ruff = "*"
types-networkx = "*"
types-defusedxml = "*"
types-pyyaml = "*"
pytest = "*"
types-setuptools = "*"
pytest-mock = "*"
bandit = "*"
pre-commit = "*"
mypy = "*"
types-tqdm = "*"
types-pyinstaller = "*"
pyinstaller = {version = "*", python = "<3.15"}

[tool.ruff]
exclude = [".*", "**/migrations/*.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "COM812", "ANN401"]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
warn_unreachable = true
show_error_codes = true
files = "."

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = ["./experiment.py"]
